k8-configs/user-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: dev
spec:
  selector:
    app: user-service
  ports:
  - port: 80
    targetPort: 8000
